--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 <body>
 <main>
 <div class="textContent">
-    <h1 id="text"></h1>
+    <h1 id="text">Я б у бу<span class="strike">Г</span>алтери пійшов...
+    </h1>
 
     <p>В червні на Текстах вийшла стаття про зарплати, на основі даних понад мільйона декларацій. Однак декларація може розповісти не тільки про те, скільки людина заробляє, але й чи вміє вона написати назву своєї професії без помилки</p>
 
@@ -125,7 +126,7 @@
     <div class="textContent">
         <h1 title="">ДСЗА</h1>
         <p></p>
-    <p>А ще <b>д</b>екларанти <b>с</b>ильно <b>з</b>ловживають <b>а</b>бревіатурами (ДСЗА). Ні, більшість людей, не знає, що таке <b>СДРІ</b> (старший державний ревізор інспектор), <b>ДПРЧ</b> (державна пожежно-рятувальна частина), <b>УФЗБО</b> (управління фінансового забезпечення та бухгалтерського обліку) тощо.</p>
+    <p>А ще <b>Д</b>екларанти <b>С</b>ильно <b>З</b>ловживають <b>А</b>бревіатурами. Ні, більшість людей, не знає, що таке <b>СДРІ</b> (старший державний ревізор інспектор), <b>ДПРЧ</b> (державна пожежно-рятувальна частина), <b>УФЗБО</b> (управління фінансового забезпечення та бухгалтерського обліку) тощо.</p>
     <p>Деякі з них настільки звикли до профабревіатур, що навіть не бачать під ними інших цілком реальних слів. Як наприклад, оці шановні люди:</p>
     <p><span class="misprint">ст. інспектор с од <span class="strike">ВОР</span> оу гу дфс у м. києві</span></p>
     <p><span class="misprint">провідний  <span class="strike">фахівець ВОР</span>та гп урнс гу дснс в одеській області
