--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>СКІЛЬКИ ЗАРОБЛЯТЬ В ДЕРЖСЕКТОРІ. 170 ПРОФЕСІЙ</title>
+<title>Я б у бухгалтери пішов...</title>
 
 <!-- OpenGraph Meta Tags -->
 <meta property="og:site_name"
-      content="СКІЛЬКИ ЗАРОБЛЯТЬ В ДЕРЖСЕКТОРІ. 170 ПРОФЕСІЙ."/>
-<meta property="og:type" content="http://texty.org.ua/d/2019/salaries/"/>
+      content="Я б у бухгалтери пішов..."/>
+<meta property="og:type" content=""/>
 <meta property="og:title"
-      content="СКІЛЬКИ ЗАРОБЛЯТЬ В ДЕРЖСЕКТОРІ. 170 ПРОФЕСІЙ."/>
-<meta property="og:image" content="http://texty.org.ua/d/2019/salaries/img/cover.png"/>
+      content="Я б у бухгалтери пішов..."/>
+<meta property="og:image" content=""/>
 <meta property="og:description"
       content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат."/>
-<meta property="og:url" content="http://texty.org.ua/d/2019/salaries/"/>
+<meta property="og:url" content=""/>
 
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:site" content="@textyorgua"/>
 <meta property="twitter:account_id" content="49572937"/>
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:url" content=http://texty.org.ua/d/2019/salaries/"/>
+<meta name="twitter:url" content="""/>
 <meta name="twitter:title"
-      content="СКІЛЬКИ ЗАРОБЛЯТЬ В ДЕРЖСЕКТОРІ. 170 ПРОФЕСІЙ."/>
+      content="Я б у бухгалтери пішов..."/>
 <meta name="twitter:description"
       content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат."/>
-<meta name="twitter:image:src" content="http://texty.org.ua/d/2019/salaries/img/cover.png"/>
+<meta name="twitter:image:src" content=""/>
 <meta name="twitter:image:width" content="1200"/>
 <meta name="twitter:image:height" content="630"/>
 
 
 <!-- Other Meta Tags -->
 <meta name="title"
-      content="СКІЛЬКИ ЗАРОБЛЯТЬ В ДЕРЖСЕКТОРІ. 170 ПРОФЕСІЙ.">
+      content="Я б у бухгалтери пішов...">
 <meta name="description"
       content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат.">
 
