--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta name="twitter:site" content="@textyorgua"/>
 <meta property="twitter:account_id" content="49572937"/>
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:url" content="""/>
+<meta name="twitter:url" content=""/>
 <meta name="twitter:title"
       content="Я б у бухгалтери пішов..."/>
 <meta name="twitter:description"
@@ -95,7 +95,11 @@
     <p> Наведіть мишею на стрілки, щоб гортати вліо/вправо. Ми залишили всі варіанти помилок та одруківок, що зустрічались більше 1 разу.</p>
     </div>
 
-    <div class="sliderContainer">
+   <!--Мобільна версія collapsible buttons-->
+    <div id="examplesContainer1" class="mob"></div>
+
+    <!--Десктопна версія слайдер  -->
+    <div class="sliderContainer desk">
         <div class="prev-next-btns">
             <div id="prev-btn" data-tippy="Гортайте слайдер"><img style="width:100%; transform: rotate(180deg);" src="img/arrow.png"/></div>
             <div id="next-btn" data-tippy-content="Гортайте слайдер"><img style="width:100%" src="img/arrow.png"/></div>
@@ -111,7 +115,12 @@
      <p>За необхідності апострф можна замінити на зірочку, подвійні лапки, мʼякий знак або просто пропустити. Дивіться, до яких прийомів найчастіше вдалавлись декларанти.</p>
    </div>
 
-        <div class="sliderContainer">
+    <!--Мобільна версія collapsible buttons-->
+    <div id="examplesContainer2" class="mob"></div>
+
+    <!--Десктопна версія слайдер  -->
+
+        <div class="sliderContainer desk">
             <div class="prev-next-btns">
                 <div id="prev-btn-ap" data-tippy="Гортайте слайдер"><img style="width:100%; transform: rotate(180deg);" src="img/arrow.png"/></div>
                 <div id="next-btn-ap" data-tippy-content="Гортайте слайдер"><img style="width:100%" src="img/arrow.png"/></div>
@@ -288,7 +297,7 @@
 <script src="lib/share-behavior.js"></script>
 <script src="lib/shuffletext.jquery.min.js"></script>
 <script src="js/script.js"></script>
-<!--<script src="js/misprints.js"></script>-->
+<script src="js/misprints.js"></script>
 
 <script>
 
