--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
     <h1 id="text">Я б у бу<span class="strike">Г</span>алтери пійшов...
     </h1>
 
-    <p>В червні на Текстах вийшла стаття про зарплати, на основі даних понад мільйона декларацій. Однак декларація може розповісти не тільки про те, скільки людина заробляє, але й чи вміє вона написати назву своєї професії без помилки</p>
+    <p>В червні на ТЕКСТАХ вийшла стаття про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
 
-    <p>І хоча помилок в деклараціяї не настільки багато, аби бити в колокол, та чимала неправильно зазначених назв скоріше одруківки, деякі з них, безумовно, цікаві. Дивіться самі:</p>
+    <p>Часто це скоріше одруківки, і до 1 вересня, Дня знань ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
+    </p>
+
+    <p>Найцікавіші одруківки, звісно, ті, за якими можна угледіти додатковий зміст, як наприклад, ось тут:
+    </p>
 
     <p><span class="misprint">б<span class="strike">лу</span>хгалтер</span> — постійно бігає десь у справах або без справ</p>
     <p><span class="misprint">бу<span class="strike">ха</span>лтер</span> — якщо хочеться якось скоротити це довге слово, краще вже викинути "х", ніж "г"</p>
