--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 <main>
 <div class="textContent">
-    <h1 id="text">Я б у бу<span class="strike">Г</span>алтери пійшов...
+    <h1 id="text">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...
     </h1>
 
     <p>В червні на ТЕКСТАХ вийшла стаття про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
