--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 </style>
 <!-- Scripts -->
 <body>
+<header>
+    <img style="width:100%;" src="img/cover.png">
+</header>
 <main>
+
 <div class="textContent">
     <h1 id="text">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...
     </h1>
