--- a/index.html
+++ b/index.html
@@ -60,17 +60,20 @@
 <!-- Scripts -->
 <body>
 <header>
-    <img style="width:100%;" src="img/cover.png">
+    <!--<div id="cover-hover"></div>-->
+    <img src="img/cover.png"/>
+    <h1 id="title" class="desk">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...<br> Найсмішніші помилки з декларацій
+    </h1>
 </header>
 <main>
 
 <div class="textContent">
-    <h1 id="text">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...
+    <h1 id="title" class="mob">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...<br> Найсмішніші помилки з декларацій
     </h1>
 
-    <p>В червні на ТЕКСТАХ вийшла стаття про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
+    <p>В червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
 
-    <p>Часто це скоріше одруківки, і до 1 вересня, Дня знань ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
+    <p>Здебільшого, це хибодруки, але до 1 вересня ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
     </p>
 
     <p>Найцікавіші одруківки, звісно, ті, за якими можна угледіти додатковий зміст, як наприклад, ось тут:
@@ -90,7 +93,7 @@
     <p><span class="misprint">вч<span class="strike">і</span>тель</span> — випадкова в професії людина</p>
     <p><span class="misprint">ст<span class="strike">ра</span>ший</span> — дуже шанований колегами</p>
     <p><span class="misprint">спіц<span class="strike">а</span>ліст</span> — фахівець із вʼязання спицями</p>
-    <p><span class="misprint">фа<span class="strike">к</span>івець</span> — вкрай необхідний спеціаліст для факінг-отраслі</p>
+    <p><span class="misprint">фа<span class="strike">к</span>івець</span> — вкрай необхідний спеціаліст для <a href=https://www.youtube.com/watch?v=Zv9GzPUEHEo target="_blank">факінг-отраслі</a></p>
     <p><span class="misprint"><span class="strike">в</span>ахівець</span> — фахівець найвищого рівня</p>
     <p><span class="misprint">інспектор<span class="strike">т</span></span> — дорого, але солодко</p>
     <p><span class="misprint">інс<span class="strike">т</span>пектор</span> — перевіряє instagram</p>
@@ -98,10 +101,15 @@
     <p><span class="misprint">о<span class="strike">гр</span>ани</span> — це такі органи, де працюють огри (в кельтській міфології — потворні злі велетні-людожери, як відомий усім Шрек з одноіменного мультфільма)</p>
     <p><span class="misprint">майст<span class="strike">а</span>р</span> — зірка цеху</p>
     <p><span class="misprint"><span class="strike">шикалат</span></span> — жартуємо) такого в деклараціяї не було, але ми точно знаємо, що деяки люди пишуть це слово саме так.</p>
-    <p>Цікаво, що найбільше системних помилок допускають в назві професії "спеціаліст". Ми знайшли прийнамйні 5 альтернативних способів написання цього слова: спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</p>
-    <p>Цікаві варіанти написання таких професій як "бригадир" та "диспетчер", а ось в назвах "офіцер", "інспектор", "секретар", "механік" та інші - найрозповсюдженою помилкою є російський варіант написання цих слів. Розповсюдженною помилкою є кількість "н" в суфіксах. Якщо сумніваєтесь, одна чи дві, краще писати три. Хай краще думають, що у вас залипла кнопка на клавіатурі, ніж що ви погано вчились у школі. </p>
-    <p> Наведіть мишею на стрілки, щоб гортати вліо/вправо. Ми залишили всі варіанти помилок та одруківок, що зустрічались більше 1 разу.</p>
-    </div>
+    <p>Найбільше системних помилок допускають в назві професії "спеціаліст". Ми знайшли прийнамйні 5 альтернативних способів написання цього слова: спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</p>
+
+    <p>Цікаві варіанти написання таких професій як "бригадир" та "диспетчер", а ось в назвах "офіцер", "інспектор", "секретар", "механік" та інші - найрозповсюдженою помилкою є російський варіант написання цих слів.
+    <p>Якщо сумніваєтесь, одна чи дві “Н” — краще ставити три. Всі ж так робили в шкільних диктантах… Хай краще думають, що у вас залипла кнопка на клавіатурі.</p>
+    <p>Гортайте слайдер вліво-вправо за допомогою миші або стрілок на клавіатурі, щоб переглянути всі хибодруки. Ми виписали всі варіанти помилок та хибодруків, які траплялись більше одного разу.</p>
+
+    <p>Слово / частота</p>
+
+        </div>
 
    <!--Мобільна версія collapsible buttons-->
     <div id="examplesContainer1" class="mob"></div>
@@ -184,7 +192,7 @@
 
 <div id="logo-soc">
     <div class="logo">
-        <a href="http://texty.org.ua/" target="_blank"><img class='top-logo' style="width:100%" src="img/logo.png"/></a>
+        <a href="http://texty.org.ua/" target="_blank"><img class='top-logo' style="width:100%" src="img/logо.jpg"/></a>
         <!--<a href="http://texty.org.ua/" target="_blank"><img class='partner-logo' style="width:100%" src=""/></a>-->
     </div>
 
