--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 <script src="lib/share-behavior.js"></script>
 <script src="lib/shuffletext.jquery.min.js"></script>
 <script src="js/script.js"></script>
-<script src="js/misprints.js"></script>
+<script src="js/mobile.js"></script>
 
 <script>
 
