--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <p>В червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
 
-    <p>Здебільшого, це хибодруки, але до 1 вересня ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
+    <p>Здебільшого, це хибодруки. Але до 1 вересня ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
     </p>
 
     <p>Найцікавіші одруківки, звісно, ті, за якими можна угледіти додатковий зміст, як наприклад, ось тут:
@@ -126,7 +126,7 @@
     </div>
 
     <div class="textContent">
-    <h1>З апострфоом треба щось рєшать</h1>
+    <h2>З апострфоом треба щось рєшать</h2>
     <p>Що там не кажи, а апостроф на клавіатурі розташований не зручно. Судячи з того, скільки разів декларанти писали "сімя" замість "cімʼя" і "звязку" замість "зв'язку" знайти апостроф багато кому так і не вдалось. Десь у кутку, перед цифрою "1", разом зі знаком гривні, приблизно дорівнює та російською "Ё". І це за умови якщо у вас нова клавіатура, на старих знайти апостроф може бути ще важче.</p>
      <p>За необхідності апострф можна замінити на зірочку, подвійні лапки, мʼякий знак або просто пропустити. Дивіться, до яких прийомів найчастіше вдалавлись декларанти.</p>
    </div>
@@ -149,7 +149,7 @@
 
 
     <div class="textContent">
-        <h1 title="">ДСЗА</h1>
+        <h2 title="">ДСЗА</h2>
         <p></p>
     <p>А ще <b>Д</b>екларанти <b>С</b>ильно <b>З</b>ловживають <b>А</b>бревіатурами. Ні, більшість людей, не знає, що таке <b>СДРІ</b> (старший державний ревізор інспектор), <b>ДПРЧ</b> (державна пожежно-рятувальна частина), <b>УФЗБО</b> (управління фінансового забезпечення та бухгалтерського обліку) тощо.</p>
     <p>Деякі з них настільки звикли до профабревіатур, що навіть не бачать під ними інших цілком реальних слів. Як наприклад, оці шановні люди:</p>
@@ -165,8 +165,8 @@
     </p>
 
 
-    <h1>Відчути себе багатієм</h1>
-    <p>Ренат Ахметов може втратити свій статус найбагатшого українця. У 2018 рік звичайни <a href="https://public.nazk.gov.ua/declaration/8e1b468d-da75-40eb-9b0a-9e5681c6f29a">львівський інженер задекдарував майже 100 млрд грн доходу, джерелом яких стала заробітна плата в держсекторі.</p>
+    <h2>Відчути себе багатієм</h2>
+    <p>Ренат Ахметов може втратити свій статус найбагатшого українця. У 2018 рік звичайни львівський інженер задекдарував майже 100 млрд грн доходу, джерелом яких стала заробітна плата в держсекторі.</p>
     <img style="width:90%; margin:auto;" src="img/richest.png"/>
 
     <p>На другому місці водій з Полтавщини.</p>
@@ -175,11 +175,14 @@
         <!-- Уточнююча Моряка -->
         <!--https://public.nazk.gov.ua/declaration/68d537e2-4f78-468b-9221-d1d4dfd2ec45-->
         <!--https://public.nazk.gov.ua/declaration/ca63bd21-1d5f-4e60-b017-8f5fe4240aaa-->
+        <!--https://public.nazk.gov.ua/declaration/8e1b468d-da75-40eb-9b0a-9e5681c6f29a-->
+        <!--https://public.nazk.gov.ua/declaration/286e4f26-00fb-43fa-97cb-047453700e92-->
         <!--Пиріг Дмитро Олександрович-->
         <!--Моряк Ігор Йосифович-->
-        <p>Щоправда, обидва пізніше подали <a href="https://public.nazk.gov.ua/declaration/286e4f26-00fb-43fa-97cb-047453700e92">уточнюючі</a> декларації, але як приємно хоча б на три відчути себе міліардером</p>
 
-    <h1>Кухаря-рятувальника викликали?</h1>
+        <p>Щоправда, обидва пізніше подали уточнюючі декларації, але як приємно хоча б на три відчути себе міліардером</p>
+
+    <h2>Кухаря-рятувальника викликали?</h2>
     <p>А ще ми нашли в декраціях професію "кухаря-рятувальника". Уява відразу намалювала людину, яка несе смачний корисний обід до офісу, щоб ти вчасно поїв, навіть якщо на дворі сніжний занос, пробка, гроза чи тиждень до зарплати. Також кухарі-рятувальники можуть допомогти, коли немає часу або бажання готувати, або коли гості сказали, що будуть за годинку, або ж коли ви намагались приготувати фаршировану щуку, але щось пішло не так.
 
 <p>Не треба недооцюнювати те, чим ви займаєтесь. </p>
