--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <!-- OpenGraph Meta Tags -->
 <meta property="og:site_name"
       content="Я б у бухгалтери пішов..."/>
-<meta property="og:type" content=""/>
+<meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta property="og:title"
       content="Я б у бухгалтери пішов..."/>
-<meta property="og:image" content=""/>
+<meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
 <meta property="og:description"
-      content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат."/>
+      content="Найсмішніші помилки з декларацій"/>
 <meta property="og:url" content=""/>
 
 
@@ -21,12 +21,12 @@
 <meta name="twitter:site" content="@textyorgua"/>
 <meta property="twitter:account_id" content="49572937"/>
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:url" content=""/>
+<meta name="twitter:url" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta name="twitter:title"
       content="Я б у бухгалтери пішов..."/>
 <meta name="twitter:description"
-      content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат."/>
-<meta name="twitter:image:src" content=""/>
+      content="Найсмішніші помилки з декларацій"/>
+<meta name="twitter:image:src" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
 <meta name="twitter:image:width" content="1200"/>
 <meta name="twitter:image:height" content="630"/>
 
@@ -35,7 +35,7 @@
 <meta name="title"
       content="Я б у бухгалтери пішов...">
 <meta name="description"
-      content="Ми проаналізували декларації за 2018 рік, виокремили найбільш розповсюджені професії та подивились на розподіл зарплат.">
+      content="Найсмішніші помилки з декларацій">
 
 
 <!-- Links -->
@@ -62,7 +62,7 @@
 <header>
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
-    <h1 id="title" class="desk">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...<br> Найсмішніші помилки з декларацій
+    <h1 id="title" class="desk">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...<br> найсмішніші помилки з декларацій
     </h1>
 </header>
 <main>
@@ -71,41 +71,49 @@
     <h1 id="title" class="mob">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;">г</span> алтери пійшов...<br> Найсмішніші помилки з декларацій
     </h1>
 
-    <p>В червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних понад мільйона декларацій. Кількість помилок і одруківок, що була допущена декларантами при зазначені професії, суттєво ускладнила процес аналізу даних, але зробила його дещо веселішим.</p>
-
-    <p>Здебільшого, це хибодруки. Але до 1 вересня ми нагадуємо про те, що коректно заповнені дані, так само як і вміння зазначити свою професію без помилок, важливі.
+    <p>У червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних із понад мільйона декларацій. Виконання цього проекту мало одну особливість. Декларанти при зазначенні своїх професій наробили стільки помилок і хибодруків, що це суттєво ускладнило процес аналізу даних. Але, ніде правди діти, від цього він став дещо веселішим.
     </p>
 
-    <p>Найцікавіші одруківки, звісно, ті, за якими можна угледіти додатковий зміст, як наприклад, ось тут:
+    <p>Часто це швидше хибодруки, ніж помилки. Тож до 1 вересня, Дня знань, ми нагадуємо про те, що коректно заповнені дані, так само як і вміння вказати свою професію без помилок, важливі.
     </p>
 
-    <p><span class="misprint">б<span class="strike">лу</span>хгалтер</span> — постійно бігає десь у справах або без справ</p>
-    <p><span class="misprint">бу<span class="strike">ха</span>лтер</span> — якщо хочеться якось скоротити це довге слово, краще вже викинути "х", ніж "г"</p>
-    <p><span class="misprint">депут<span class="strike">у</span>т</span> — завжди в центрі уваги</p>
-    <p><span class="misprint">депута<span class="strike">м</span></span> — хто-зна де</p>
-    <p><span class="misprint">депу<span class="strike">п</span>ат</span> — знову депутат, самі дивуємось варіативності одруківок в цьому слові</p>
-    <p><span class="misprint">д<span class="strike">у</span>путат</span> — протирає штані на засіданнях</p>
-    <p><span class="misprint">де<span class="strike">р</span>утат</span> — не прогавить можливість заробити</p>
-    <p><span class="misprint">де<span class="strike">туп</span>ат</span> — не прогавить можливості прогавити можливіcть</p>
+    <p>Найцікавіші хибодруки, звісно, ті, за якими можна угледіти додатковий зміст. Як, наприклад, ось у цих:
+    </p>
+
+    <p><span class="misprint">б<span class="strike">лу</span>хгалтер</span> — постійно блукає десь у справах… або без</p>
+    <p><span class="misprint">бу<span class="strike">ха</span>лтер</span> — якщо хочеться якось скоротити це довге слово, краще вже викинути "х", ніж "г", бо бухати на роботі заборонено</p>
+    <p><span class="misprint">депут<span class="strike">у</span>т</span> — завжди тут, у центрі уваги</p>
+    <p><span class="misprint">депута<span class="strike">м</span></span> — хтозна де</p>
+    <p><span class="misprint">депу<span class="strike">п</span>ат</span> — знову депутат, самі дивуємося варіативності хибодруків у цьому слові</p>
+    <p><span class="misprint">д<span class="strike">у</span>путат</span> — протирає штани на своїй дупі</p>
+    <p><span class="misprint">де<span class="strike">р</span>утат</span> — не прогавить можливості заробити, дере всюди, де може</p>
+    <p><span class="misprint">де<span class="strike">туп</span>ат</span> — не прогавить можливості прогавити можливість, тупить всюди</p>
     <p><span class="misprint">дирек<span class="strike">от</span>ра</span> — якщо директорки змінюються занадто часто</p>
     <p><span class="misprint">ди<span class="strike">т</span>ектор</span> — коли начальник бачить підлеглих наскрізь</p>
-    <p><span class="misprint">викладач-м<span class="strike">и</span>тодист</span> — не працює задарма або, як варіант, викладає митну справу</p>
+    <p><span class="misprint">викладач-м<span class="strike">и</span>тодист</span> — не працює задарма. Або, як варіант, викладає митну справу.</p>
     <p><span class="misprint">вч<span class="strike">і</span>тель</span> — випадкова в професії людина</p>
-    <p><span class="misprint">ст<span class="strike">ра</span>ший</span> — дуже шанований колегами</p>
-    <p><span class="misprint">спіц<span class="strike">а</span>ліст</span> — фахівець із вʼязання спицями</p>
+    <p><span class="misprint">ст<span class="strike">ра</span>ший</span> —  дуже шанований колегами</p>
+    <p><span class="misprint">спіц<span class="strike">а</span>ліст</span> — фахівець із плетіння на спицях</p>
     <p><span class="misprint">фа<span class="strike">к</span>івець</span> — вкрай необхідний спеціаліст для <a href=https://www.youtube.com/watch?v=Zv9GzPUEHEo target="_blank">факінг-отраслі</a></p>
-    <p><span class="misprint"><span class="strike">в</span>ахівець</span> — фахівець найвищого рівня</p>
+    <p><span class="misprint"><span class="strike">в</span>ахівець</span> — фахівець найвищого рівня, просто вах!
+    </p>
     <p><span class="misprint">інспектор<span class="strike">т</span></span> — дорого, але солодко</p>
-    <p><span class="misprint">інс<span class="strike">т</span>пектор</span> — перевіряє instagram</p>
-    <p><span class="misprint">спеціаліст із закупіве<span class="strike">н</span>ь</span> — встигає розмістити всі тендери до 8 ранку</p>
-    <p><span class="misprint">о<span class="strike">гр</span>ани</span> — це такі органи, де працюють огри (в кельтській міфології — потворні злі велетні-людожери, як відомий усім Шрек з одноіменного мультфільма)</p>
+    <p><span class="misprint">інс<span class="strike">т</span>пектор</span> — перевіряє пости в instagram</p>
+    <p><span class="misprint">спеціаліст із закупіве<span class="strike">н</span>ь</span> — встигає розмістити всі тендери до 8 ранку
+    </p>
+    <p><span class="misprint">о<span class="strike">гр</span>ани</span> — це такі органи, де працюють огри (в кельтській міфології — потворні злі велетні-людожери, як відомий усім Шрек з однойменного мультфільму)</p>
     <p><span class="misprint">майст<span class="strike">а</span>р</span> — зірка цеху</p>
-    <p><span class="misprint"><span class="strike">шикалат</span></span> — жартуємо) такого в деклараціяї не було, але ми точно знаємо, що деяки люди пишуть це слово саме так.</p>
-    <p>Найбільше системних помилок допускають в назві професії "спеціаліст". Ми знайшли прийнамйні 5 альтернативних способів написання цього слова: спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</p>
+    <p><span class="misprint"><span class="strike">шикалат</span></span> — жартуємо) такого в деклараціях не було, але ми точно знаємо, що деякі люди пишуть це слово саме так.
+    </p>
+    <p>Цікаво, що найбільшої кількості системних помилок припускаються в назві професії "спеціаліст". Ми знайшли щонайменше 5 альтернативних способів написання цього слова: <b>спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</b>
+    </p>
 
-    <p>Цікаві варіанти написання таких професій як "бригадир" та "диспетчер", а ось в назвах "офіцер", "інспектор", "секретар", "механік" та інші - найрозповсюдженою помилкою є російський варіант написання цих слів.
-    <p>Якщо сумніваєтесь, одна чи дві “Н” — краще ставити три. Всі ж так робили в шкільних диктантах… Хай краще думають, що у вас залипла кнопка на клавіатурі.</p>
-    <p>Гортайте слайдер вліво-вправо за допомогою миші або стрілок на клавіатурі, щоб переглянути всі хибодруки. Ми виписали всі варіанти помилок та хибодруків, які траплялись більше одного разу.</p>
+    <p>Цікаві варіанти написання таких професій, як "бригадир" та "диспетчер". А от у назвах "офіцер", "інспектор", "секретар", "механік" найрозповсюдженішою помилкою є російський варіант написання цих слів.
+
+     <p>Якщо сумніваєтесь, одна чи дві “Н” — краще ставити три. Всі ж так робили в шкільних диктантах… Хай краще думають, що у вас залипла кнопка на клавіатурі.
+</p>
+    <p>Гортайте слайдер вліво-вправо за допомогою миші або стрілок на клавіатурі, щоб переглянути всі хибодруки. Ми виписали всі варіанти помилок та хибодруків, які траплялись більше одного разу.
+    </p>
 
     <p>Слово / частота</p>
 
@@ -126,9 +134,12 @@
     </div>
 
     <div class="textContent">
-    <h2>З апострфоом треба щось рєшать</h2>
-    <p>Що там не кажи, а апостроф на клавіатурі розташований не зручно. Судячи з того, скільки разів декларанти писали "сімя" замість "cімʼя" і "звязку" замість "зв'язку" знайти апостроф багато кому так і не вдалось. Десь у кутку, перед цифрою "1", разом зі знаком гривні, приблизно дорівнює та російською "Ё". І це за умови якщо у вас нова клавіатура, на старих знайти апостроф може бути ще важче.</p>
-     <p>За необхідності апострф можна замінити на зірочку, подвійні лапки, мʼякий знак або просто пропустити. Дивіться, до яких прийомів найчастіше вдалавлись декларанти.</p>
+    <h2>З апострофом треба шось рєшать
+    </h2>
+    <p>Що там не кажи, а апостроф на клавіатурі розташований незручно. Судячи з того, скільки разів декларанти писали "сімя" замість "cімʼя" і "звязку" замість "зв'язку", знайти його багатьом так і не вдалось.
+    </p>
+     <p>За необхідності апостроф можна замінити на зірочку, подвійні лапки, мʼякий знак або просто пропустити. Дивіться, до яких прийомів найчастіше вдавались декларанти. Підказка: апостроф на українській розкладці розташований перед цифрою 1.
+     </p>
    </div>
 
     <!--Мобільна версія collapsible buttons-->
@@ -151,8 +162,10 @@
     <div class="textContent">
         <h2 title="">ДСЗА</h2>
         <p></p>
-    <p>А ще <b>Д</b>екларанти <b>С</b>ильно <b>З</b>ловживають <b>А</b>бревіатурами. Ні, більшість людей, не знає, що таке <b>СДРІ</b> (старший державний ревізор інспектор), <b>ДПРЧ</b> (державна пожежно-рятувальна частина), <b>УФЗБО</b> (управління фінансового забезпечення та бухгалтерського обліку) тощо.</p>
-    <p>Деякі з них настільки звикли до профабревіатур, що навіть не бачать під ними інших цілком реальних слів. Як наприклад, оці шановні люди:</p>
+    <p>А ще <b>Д</b>екларанти <b>С</b>ильно <b>З</b>ловживають <b>А</b>бревіатурами (ДСЗА). Впевнені, більшість людей не знає, що таке СДРІ (старший державний ревізор-інспектор), ДПРЧ (державна пожежно-рятувальна частина), УФЗБО (управління фінансового забезпечення та бухгалтерського обліку) тощо.</p>
+
+    <p>Деякі з декларантів настільки звикли до профабревіатур, що навіть не бачать за ними інших, цілком реальних слів. Як, наприклад, оці шановні люди:
+    </p>
     <p><span class="misprint">ст. інспектор с од <span class="strike">ВОР</span> оу гу дфс у м. києві</span></p>
     <p><span class="misprint">провідний  <span class="strike">фахівець ВОР</span>та гп урнс гу дснс в одеській області
 </span></p>
@@ -165,11 +178,12 @@
     </p>
 
 
-    <h2>Відчути себе багатієм</h2>
-    <p>Ренат Ахметов може втратити свій статус найбагатшого українця. У 2018 рік звичайни львівський інженер задекдарував майже 100 млрд грн доходу, джерелом яких стала заробітна плата в держсекторі.</p>
+    <h2>Відчути себе багатієм
+    </h2>
+    <p>Рінат Ахметов може втратити свій статус найбагатшого українця. За 2018 рік звичайний львівський інженер задекларував майже 100 мільярдів гривень доходу, джерелом яких стала заробітна плата в держсекторі. На другому місці — водій з Полтавщини. Щоправда, обидва потім подали уточнювальні декларації. Але як приємно хоча б на три дні відчути себе мільярдером!
+    </p>
     <img style="width:90%; margin:auto;" src="img/richest.png"/>
 
-    <p>На другому місці водій з Полтавщини.</p>
     <img style="width:90%; margin:auto;" src="img/second_the_richest.png"/>
 
         <!-- Уточнююча Моряка -->
@@ -180,16 +194,19 @@
         <!--Пиріг Дмитро Олександрович-->
         <!--Моряк Ігор Йосифович-->
 
-        <p>Щоправда, обидва пізніше подали уточнюючі декларації, але як приємно хоча б на три відчути себе міліардером</p>
 
-    <h2>Кухаря-рятувальника викликали?</h2>
-    <p>А ще ми нашли в декраціях професію "кухаря-рятувальника". Уява відразу намалювала людину, яка несе смачний корисний обід до офісу, щоб ти вчасно поїв, навіть якщо на дворі сніжний занос, пробка, гроза чи тиждень до зарплати. Також кухарі-рятувальники можуть допомогти, коли немає часу або бажання готувати, або коли гості сказали, що будуть за годинку, або ж коли ви намагались приготувати фаршировану щуку, але щось пішло не так.
+    <h2>Кухаря-рятувальника викликали?
+    </h2>
+    <p>А ще ми знайшли в деклараціях професію "кухаря-рятувальника". Уява відразу намалювала людину, яка несе смачний корисний обід до офісу, щоб ти вчасно поїв, навіть якщо заметіль, гроза і тиждень до зарплати. Також кухарі-рятувальники можуть зарадити, коли немає часу або бажання готувати, або коли гості сказали, що будуть за годинку, або ж коли ви намагались приготувати фаршировану щуку, але щось пішло не так.</p>
 
-<p>Не треба недооцюнювати те, чим ви займаєтесь. </p>
+<p>Не треба недооцінювати те, чим ви займаєтесь.
+</p>
 
- <p>А ще не треба сприймайти нашу гумор-колонку близько до серця. Із 311 тис. відібраних слів трохи більше за 7 тис. були написані з помилками, що складає 2.35%. Помилки ми знаходили за допомогою бібліотеки hunspell (точність визначення помилково написаного слова склала понад 95%). Більшість із знайдених нами помилок не є системними, хоча й без них, звісно, не обходиться. </p>
+ <p>А ще не треба брати нашу жартівливу колонку близько до серця. Із 311 тисяч відібраних слів трохи більше за 7 тисяч були написані з помилками, що складає 2.35%. Помилки ми шукали за допомогою бібліотеки hunspell (точність визначення помилково написаного слова склала понад 95%). Більшість зі знайдених нами помилок не є системними, хоча й без них, звісно, не обходиться.
+ </p>
 
-    <p>Просто, якщо колись вам доведеться заповнювати декларацію, будьте уважніші. </p>
+    <p>Просто, якщо колись вам доведеться заповнювати декларацію, пильнуйте за тим, що пишете.
+    </p>
     </div>
 
 
@@ -201,8 +218,8 @@
 
     <div id="soc">
         <!--<div id="translate"><a href="http://texty.org.ua/d/2019/numbers/en"> <span>English</span> </a></div>-->
-        <a href="https://www.facebook.com/sharer/sharer.php?u=http://texty.org.ua/d/2019/salaries/" target="_blank" class="share-btn"><i class="fab fa-facebook-square"></i></a>
-        <a href="https://twitter.com/intent/tweet?text=http://texty.org.ua/d/2019/salaries/" target="_blank" class="share-btn"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http://texty.org.ua/d/2019/misprints/" target="_blank" class="share-btn"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://twitter.com/intent/tweet?text=http://texty.org.ua/d/2019/misprints/" target="_blank" class="share-btn"><i class="fab fa-twitter-square"></i></a>
     </div>
 </div>
 
