--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </p>
 
     <p><span class="misprint">б<span class="strike">лу</span>хгалтер</span> — постійно блукає десь у справах… або без</p>
-    <p><span class="misprint">бу<span class="strike">ха</span>лтер</span> — якщо хочеться якось скоротити це довге слово, краще вже викинути "х", ніж "г", бо бухати на роботі заборонено</p>
+    <p><span class="misprint">бу<span class="strike">ха</span>лтер</span> — якщо хочеться якось скоротити це довге слово, краще вже викинути "х", ніж "г"</p>
     <p><span class="misprint">депут<span class="strike">у</span>т</span> — завжди тут, у центрі уваги</p>
     <p><span class="misprint">депута<span class="strike">м</span></span> — хтозна де</p>
     <p><span class="misprint">депу<span class="strike">п</span>ат</span> — знову депутат, самі дивуємося варіативності хибодруків у цьому слові</p>
