--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
     </p>
     <p><span class="misprint">інспектор<span class="strike">т</span></span> — дорого, але солодко</p>
     <p><span class="misprint">інс<span class="strike">т</span>пектор</span> — перевіряє пости в instagram</p>
-    <p><span class="misprint">спеціаліст із закупіве<span class="strike">н</span>ь</span> — встигає розмістити всі тендери до 8 ранку
-    </p>
+    <p><span class="misprint">спеціаліст із закупіве<span class="strike">н</span>ь</span> — встигає розмістити всі тендери, поки ще треті півні не співали</p>
     <p><span class="misprint">о<span class="strike">гр</span>ани</span> — це такі органи, де працюють огри (в кельтській міфології — потворні злі велетні-людожери, як відомий усім Шрек з однойменного мультфільму)</p>
     <p><span class="misprint">майст<span class="strike">а</span>р</span> — зірка цеху</p>
     <p><span class="misprint"><span class="strike">шикалат</span></span> — жартуємо) такого в деклараціях не було, але ми точно знаємо, що деякі люди пишуть це слово саме так.
