--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
     <h3><b>Читайте також:</b></h3>
     <!--<h3><b>Read also:</b></h3>-->
     <div id="read-more-items">
-        <a target="_blank" href=""><img src="img/read-more-1.png" alt="База авто"></a>
-        <a target="_blank" href=""><img src="img/read-more-2.png" alt="Парковки"></a>
-        <a target="_blank" href=""><img src="img/read-more-3.png" alt="Небезпечно для життя"></a>
+        <a target="_blank" href="http://texty.org.ua/d/pension-game/#"><img src="img/read-more-1.png" alt="pension"></a>
+        <a target="_blank" href="http://texty.org.ua/d/declarations-game/"><img src="img/read-more-2.png" alt="declarations_GO"></a>
+        <a target="_blank" href="http://texty.org.ua/d/2019/verhovna-rada/"><img src="img/read-more-3.png" alt="Три етапи ради"></a>
     </div>
 </section>
 
